--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.0.11",
+    "preline": "^2.7.0",
     "solid-js": "^1.9.2",
     "vinxi": "^0.4.3"
   },
